Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-110268

On macOS, Expose events cannot be filtered with QWindowSystemEventHandler

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P5: Not important
    • 6.4.3, 6.5.0, 6.6.0
    • 6.4.0
    • QPA
    • None
    • Windows11, Qt6.4.0 MSVC2019
      macOS Monterey, Qt6.4.0 for macOS
    • macOS
    • 2813e2814 (dev), c759af998 (6.4), 2877f076d (6.5)

    Description

      When I want to create an app that continues to update the drawing even while I am minimizing the window, on Windows I was able to achieve this by overriding QWindowSystemEventHandler::sendEvent and filtering Expose events (as in the attached updateinminimum.zip).

      However, this does not work on macOS. On macOS, Expose events are sent to QGuiApplication without going through QWindowSystemEventHandler::sendEvent.

      I want to be able to update the drawing continuously even in minimized window on macOS, just like on Windows.

      Attachments

        For Gerrit Dashboard: QTBUG-110268
        # Subject Branch Project Status CR V

        Activity

          People

            vestbo Tor Arne Vestbø
            ayamamoto Atsushi Yamamoto
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes